# highload-social-network

./: .dockerignore  .env.sample  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: db.py
app/models/: models.py
app/routers/: auth_router.py  template_router.py  user_router.py
app/schemas/: auth_session_schema.py  login_schema.py  template_schema.py  user_schema.py
app/services/: auth_handler.py  template_crud.py  template_load_generator.py  user_handler.py
app/utils/: logger.py  name_generator.py  thread_launcher.py  timer.py  timestamps_getter.py
data/001_test_profiles/: 001_process_names.ipynb  002_insert_names.ipynb  names_raw.csv  profiles.parquet
grafana/: grafana.ini
grafana/dashboards/: dashboards.yml  postgres-overview_rev1.json  postgresql-database_rev7.json  postgresql-exporter_rev1.json
grafana/datasources/: postgres_exporter_prometheus.yml
load_testing/: locustfile.py
load_testing/001_ae014fcf88_search_without_index/: loadtest_stats.csv  loadtest_stats_history.csv
load_testing/001_search_user_without_index/: loadtest_stats.csv
load_testing/002_search_user_with_index/: loadtest_failures.csv
load_testing/hw2_search_endpoint_load_test/: locust.conf  locustfile.py  (+2 more)
postgres_config/: pg_hba.conf  postgresql.db0.conf  postgresql.db1.conf  postgresql.db2.conf
postman/: 2023.05.07.social-network.postman_collection.json
prometheus/: prometheus.yml
replication/: roles.dmp  schema.dmp
scripts/: postgres_backup.sh
(+56 files in other folders)
